Removed Date field from DESCRIPTION

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-01-06  Scott Ritchie <sritchie73@gmail.com>
+
+  * DESCRIPTION: Release 1.2.6
+
+  * DESCRIPTION: Date field removed
+
 2022-12-28  Scott Ritchie <sritchie73@gmail.com>
 
   * DESCRIPTION: Release 1.2.5
